--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGOURL = "mongodb+srv://sheddybobo44:iwVn1pBP5eQ2ZYan@cluster0.ootncvw.mongodb.net/cartel?retryWrites=true&w=majority"
+JWT_SECRET={{YOUR_RANDOM_SECRET_VALUE}}
